# NN-Without-Frameworks

./: .gitignore  Dockerfile  README.md  setup.cfg  todo.md  train_regression.py
.github/workflows/: manual-ci.yml
api/: train_regression.py
api/python/nn_numpy/: __init__.py  activations.py  initializers.py  layers.py  losses.py  module.py  optimizers.py
api/python/numpy_nn/: __init__.py  activations.py  initializers.py  layers.py  losses.py  module.py  optimizers.py
api/python/pure_nn/: __init__.py  activations.py  initializers.py  (+5 more)
cpp_nn/: activations.cpp  activations.h  constant.cpp  constant.h  cpp_nn.pro  initializers.cpp  initializers.h  layers.cpp  layers.h  losses.cpp  losses.h  main.cpp  module.cpp  module.h  optimizers.cpp  optimizers.h  train.cpp  train_classification.cpp  train_regression.cpp  utils.cpp  utils.h
java_nn/src/: Module.java  train.java  train_classification.java  train_regression.java
nn_without_frameworks/: train.py
nn_without_frameworks/numpy_nn/: __init__.py  activations.py  initializers.py  layers.py  losses.py  module.py  sequential.py  utils.py
nn_without_frameworks/pure_nn/: activations.py  initializers.py  layers.py  losses.py  optimizers.py  utils.py
python_nn/: train.py  train_classification.py  train_classification_numpy_nn.py  train_classification_pure_nn.py  train_regression.py
python_nn/numpy_nn/: __init__.py  initializers.py  layers.py  losses.py  module.py  optimizers.py  sequential.py  utils.py
python_nn/pure_nn/: __init__.py  initializers.py  layers.py  losses.py  module.py  optimizers.py  utils.py
(+16 files in other folders)
