[metadata]
name = nn_without_frameworks
version = 0.0.6
author = Alireza Kazemipour
author_email = kazemipour.alireza@gmail.com
description = Building Neural Networks from scratch.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alirezakazemipour/NN-Without-Frameworks

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    numpy

package_dir = 

packages = find:
python_requires = >=3.6

[options.packages.find]
where = 
